fix: add correct arrow direction on collapse (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,11 @@
     display: flex;
   }
 }
+
+.flipTransition img {
+  transition: transform 300ms ease-in-out;
+}
+
+.flipArrow img {
+  transform: rotate(180deg);
+}
